--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ matrix:
   - elixir: 1.10
     otp_release: 22.2
 
+  - elixir: 1.11
+    otp_release: 23.0.4
+
 env:
   - MIX_ENV=test COVERALLS_ELIXIR_VERSION=1.10 COVERALLS_OTP_RELEASE=22.2 DIALYZER_PLT_FILE=priv/plts/dialyzer.plt
 script:
