Misc doc changes
Besides other documentation changes, this commit ensures the generated
HTML doc for HexDocs.pm will become the source of truth for this Elixir
library and leverage on latest features of ExDoc.

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,10 @@ erl_crash.dump
 
 # Ignore package tarball (built via "mix hex.build").
 clean_mixer-*.tar
+
+# Temporary files, for example, from tests.
+/tmp/
+
+# Misc.
 clean_mixer.plantuml
 clean_mixer.png
-
-
