--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,5 +5,5 @@ tag = True
 message = Version bumpup: {current_version} → {new_version}
 
 [bumpversion:file:mix.exs]
-search = version: "{current_version}"
-replace = version: "{new_version}"
+search = @version "{current_version}"
+replace = @version "{new_version}"
